[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Traps/LargeSaw.gd" type="Script" id=1]
[ext_resource path="res://assets/art/traps/lightning.png" type="Texture" id=2]
[ext_resource path="res://assets/audio/sfx/100hzHum.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 18.3368
height = 158.643

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.561576, 1 )
colors = PoolColorArray( 0.129412, 0.384314, 0.835294, 0.847059, 0.210192, 0.298737, 0.311035, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 2
emission_box_extents = Vector3( 80, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 75.07
gravity = Vector3( 0, 1000, 0 )
initial_velocity = 321.43
initial_velocity_random = 0.36
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_random = 0.7
color_ramp = SubResource( 3 )

[sub_resource type="Animation" id=5]
resource_name = "Flicker"
length = 0.8
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 0, 2, 1, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15, 0.4, 0.7 ),
"transitions": PoolRealArray( 0.965936, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.905882 ), Color( 1, 1, 1, 0.0235294 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.15, 0.2, 0.65, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Particles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.15, 0.7, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}

[node name="SparkTrap" type="StaticBody2D"]
collision_layer = 2147483650
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource( 1 )
disabled = true

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.2
explosiveness = 1.0
randomness = 0.26
process_material = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.00566816 )
rotation = 1.5708
scale = Vector2( 0.2, 0.4 )
texture = ExtResource( 2 )
flip_h = true
hframes = 4
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flicker = SubResource( 5 )

[node name="DesyncTimer" type="Timer" parent="."]
[connection signal="timeout" from="DesyncTimer" to="." method="_on_DesyncTimer_timeout"]
[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
autoplay = true
max_distance = 200.0
attenuation = 0.482968
